
2022-11-18  Simon Sobisch <simonsobisch@gnu.org>

	* screenio.c: fixed compiler warnings related to get_crt3_status

2022-11-04  Simon Sobisch <simonsobisch@gnu.org>

	* screenio.c [__PDCURSES__]: drop use of PDC_free_memory_allocations
	  as testing showed it raising memory errors and the function was
	  removed in PDCursesMod

2022-10-22  Simon Sobisch <simonsobisch@gnu.org>

	* fileio.c (set_sequential_variable_length): extracted from sequential_read
	  and extended to verify COB_VARSEQ_TYPE 0 (default) by its two NULL bytes
	* fileio.c (sequential_read): return status 04 if variable record length is
	  outside the record min/max, truncating the record if necessary, while
	  still position until the next record length - fixing Bug #808
	* fileio.c (cob_fd_file_open): for variable-length record sequential files
	  do a pre-validation of the first record length, returning status 39 when
	  the first record doesn't match the fixed file attributes
	* common.c (cob_fatal_error): added COB_STATUS_39_CONFLICT_ATTRIBUTE
	* common.c (cob_sig_handler): fixed uninitialized access

2022-10-19  Simon Sobisch <simonsobisch@gnu.org>

	* statement.def: added STMT_PRESENT_WHEN

2022-10-18  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am: moved header files that are not installed from EXTRA_DIST
	  to _SOURCES (per automake manual)
	* fileio.c (sequential_read): andle variable-sized record-sequential
	  files when the size was read, but no data found for that afterwards
	* mlio.c (xml_parse): fix bad assignment leading to compiler warnings
	* common.c (cob_check_beyond_exit), common.h: new function for implicit
	  exit/goback checks

2022-10-17  Simon Sobisch <simonsobisch@gnu.org>

	* common.c (cob_debug_open, cob_trace_print), intrinsic.c
	 (cob_intr_hex_to_char): prefer extending switch over use of topupper
	* call.c, common.c, intrinisic.c, screenio.c: directly call toupper/tolower
	  without previous check of islower/isupper